# siros

./: .gitignore  README.md  modelo.csv  pyproject.toml  requirements.txt  siros.py
lib/: previsao.py  rules.py  siros_parser.py  voo.py
